# uni-address-threads

./: Makefile.am  Makefile.in  acconfig.h.in  config.h.in  configure  configure.ac  configure_fx10
comm/: Makefile.in  configure  configure.ac
comm/examples/: Makefile.in
comm/include/: Makefile.am  Makefile.in  madm_comm.h  madm_debug.h  madm_misc.h
comm/include/madm/: Makefile.am  Makefile.in  allocator.h  ampeer.h  collectives.h  comm_base.h  comm_system.h  madm_comm-decls.h  madm_comm-inl.h  madm_comm_acconfig.h.in  madm_comm_config.h  options.h  threadsafe.h
comm/include/madm/fjmpi/: comm_base.h
comm/include/madm/gasnet/: comm_base.h
comm/include/madm/mpi3/: comm_base.h
comm/include/madm/shmem/: comm_base.h  comm_memory.h
comm/src/: Makefile.am  Makefile.in  ampeer-inl.h  collectives-inl.h  comm_system.cc  madm_comm.cc  options.cc
uth/: Makefile.am  Makefile.in
uth/examples/: Makefile.am  Makefile.in
uth/include/: Makefile.am  Makefile.in  uth-build.mk  uth-cxx.h
uth/include/uth/: Makefile.am  Makefile.in  acconfig.h.in  fjrdma.h  future-inl.h  future.h  iso_space.h  madi-inl.h  madi.h  process-inl.h  process.h  shmem.h  uth-inl.h  uth_comm-inl.h  uth_comm.h  uth_config.h  uth_options.h
uth/include/uth/uni/: Makefile.am  Makefile.in  context.h  context_x86_64.h  taskq-inl.h  taskq.h  worker-inl.h  worker.h
uth/misc/: uth-submit  uth-submit-template.sh
uth/src/: Makefile.am  Makefile.in  collectives.cc  collectives.h  comm_armci.h  fjrdma.cc  iso_space.cc  madi.cc  options.cc  options.h  process.cc  shmem-inl.h  shmem.cc  uth.cc  (+2 more)
(+48 files in other folders)
