otherincludedir = $(includedir)/madm

otherinclude_HEADERS = \
    allocator.h \
    ampeer.h \
    collectives.h \
    comm_base.h \
    comm_system.h \
    fetch_and_add.h \
    id_pool.h \
    madm_comm-decls.h \
    madm_comm-inl.h \
    madm_comm_config.h \
    options.h \
    process_config.h \
    threadsafe.h \
    shmem/comm_base.h \
    shmem/comm_base-inl.h \
    shmem/comm_memory.h \
    shmem/comm_memory-inl.h \
    mpi3/comm_base.h \
    mpi3/comm_memory.h \
    gasnet/comm_base.h \
    gasnet/comm_memory.h \
    fjmpi/comm_base.h \
    fjmpi/comm_memory.h

