SUBDIRS = uni

include_HEADERS = \
    debug.h \
    fjrdma.h \
    future-inl.h \
    future.h \
    iso_space.h \
    madi-inl.h \
    madi.h \
    misc.h \
    process-inl.h \
    process.h \
    shmem.h \
    uth-inl.h \
    uth_comm-inl.h \
    uth_comm.h \
    uth_config.h \
    uth_options.h

